Switch main to be async and add some more planned options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ dynamic = ["version"]
 readme = "README.md"
 
 [project.scripts]
-scrape = "scraper:main"
+scrape = "scraper:entrypoint"
 
 
 [build-system]
