--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "scraper"
 description = "Scraper in python using asyncio"
 dynamic = ["version"]
 readme = "README.md"
+license = { file = "LICENSE" }
 requires-python = ">=3.10"
 
 [project.scripts]
